prodMetadata/src/objects/Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>URL__c</columns>
        <columns>Rating__c</columns>
        <columns>Message__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Status_Cancelled</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>URL__c</columns>
        <columns>Rating__c</columns>
        <columns>Message__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>Status: z~ Cancelled</label>
    </listViews>
    <listViews>
        <fullName>Status_New</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>URL__c</columns>
        <columns>Rating__c</columns>
        <columns>Message__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Status: New</label>
    </listViews>
    <listViews>
        <fullName>Status_Pending</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>URL__c</columns>
        <columns>Rating__c</columns>
        <columns>Message__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Status: Pending</label>
    </listViews>
    <listViews>
        <fullName>Status_Resolved</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>URL__c</columns>
        <columns>Rating__c</columns>
        <columns>Message__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Resolved</value>
        </filters>
        <label>Status: Resolved</label>
    </listViews>
    <nameField>
        <displayFormat>F-{0000000}</displayFormat>
        <label>Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>